--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
         }
 
         // 候補者抽出モーダル（改良版）
-        const CandidateFilterModal = ({ isOpen, positions, onClose, onNavigateToCandidate, currentPositionId = null }) => {
+        const CandidateFilterModal = ({ isOpen, positions, onClose, onNavigateToCandidate, currentPositionId = null, onApplyFilter = null }) => {
             const [searchTerm, setSearchTerm] = useState('');
             const [selectedPosition, setSelectedPosition] = useState(currentPositionId || 'all');
             const [selectedPhase, setSelectedPhase] = useState('all');
@@ -700,6 +700,18 @@
                 onClose();
             };
 
+            // フィルタを適用
+            const handleApplyFilter = () => {
+                if (results.length === 0) {
+                    alert('検索結果がありません。先に検索を実行してください。');
+                    return;
+                }
+                
+                const filteredCandidateIds = results.map(r => r.id);
+                onApplyFilter(filteredCandidateIds);
+                onClose();
+            };
+
             if (!isOpen) return null;
 
             return (
@@ -877,6 +889,15 @@
                                         検索結果: {results.length}件
                                     </h4>
                                     <div className="flex items-center space-x-2">
+                                        {results.length > 0 && onApplyFilter && (
+                                            <button
+                                                onClick={handleApplyFilter}
+                                                className="bg-purple-500 hover:bg-purple-600 text-white px-4 py-2 rounded-lg flex items-center space-x-2 text-sm"
+                                            >
+                                                <Filter />
+                                                <span>この条件で絞り込む</span>
+                                            </button>
+                                        )}
                                         {results.length > 0 && (
                                             <button
                                                 onClick={exportToCSV}
@@ -1847,6 +1868,7 @@
             const [showAddPosition, setShowAddPosition] = useState(false);
             const [showPhaseManagement, setShowPhaseManagement] = useState(false);
             const [showFilterModal, setShowFilterModal] = useState(false);
+            const [filteredCandidateIds, setFilteredCandidateIds] = useState(null);
             const [highlightedCandidateId, setHighlightedCandidateId] = useState(null);
             const candidateRefs = useRef({});
             const [newPosition, setNewPosition] = useState({
@@ -1919,6 +1941,7 @@
                 
                 setSelectedPosition(position);
                 setSelectedCandidate(null);
+                setFilteredCandidateIds(null); // フィルタをリセット
             }, [navigationHistory]);
 
             const handleBackNavigation = useCallback(() => {
@@ -1929,6 +1952,7 @@
                     if (previousRoute.type === 'position-list') {
                         setSelectedPosition(null);
                         setSelectedCandidate(null);
+                        setFilteredCandidateIds(null);
                     } else if (previousRoute.type === 'position-detail') {
                         // 特定のポジション詳細に戻る場合
                         const position = positions.find(p => p.id === previousRoute.id);
@@ -1945,6 +1969,7 @@
                     // 履歴がない場合は一覧に戻る
                     setSelectedPosition(null);
                     setSelectedCandidate(null);
+                    setFilteredCandidateIds(null);
                 }
             }, [navigationHistory, positions]);
 
@@ -1954,6 +1979,7 @@
                 setSelectedPosition(null);
                 setSelectedCandidate(null);
                 setHighlightedCandidateId(null);
+                setFilteredCandidateIds(null);
             }, [navigationHistory]);
 
             // 候補者へナビゲート
@@ -1979,6 +2005,16 @@
                     }, 100);
                 }
             }, [positions]);
+
+            // フィルタを適用
+            const handleApplyFilter = useCallback((candidateIds) => {
+                setFilteredCandidateIds(candidateIds);
+            }, []);
+
+            // フィルタをクリア
+            const clearFilter = useCallback(() => {
+                setFilteredCandidateIds(null);
+            }, []);
 
             // 候補者選択
             const handleCandidateClick = useCallback((candidate) => {
@@ -2222,6 +2258,7 @@
             // カンバンボード表示
             if (selectedPosition) {
                 const totalCandidates = selectedPosition.phases.reduce((sum, phase) => sum + phase.candidates.length, 0);
+                const filteredCount = filteredCandidateIds ? filteredCandidateIds.length : totalCandidates;
 
                 return (
                     <div className="p-6 bg-gray-100 min-h-screen pt-20">
@@ -2247,6 +2284,15 @@
                                     />
                                 </div>
                                 <div className="flex items-center space-x-2">
+                                    {filteredCandidateIds && (
+                                        <button
+                                            onClick={clearFilter}
+                                            className="flex items-center space-x-2 bg-red-500 hover:bg-red-600 text-white px-3 py-2 rounded-lg text-sm"
+                                        >
+                                            <FilterX />
+                                            <span>フィルタ解除</span>
+                                        </button>
+                                    )}
                                     <button
                                         onClick={() => setShowFilterModal(true)}
                                         className="flex items-center space-x-2 bg-green-500 hover:bg-green-600 text-white px-3 py-2 rounded-lg text-sm"
@@ -2265,81 +2311,104 @@
                             </div>
                             <div>
                                 <h1 className="text-2xl font-bold text-gray-800">{selectedPosition.name}</h1>
-                                <p className="text-gray-600">{selectedPosition.department} | 総候補者数: {totalCandidates}名</p>
+                                <p className="text-gray-600">
+                                    {selectedPosition.department} | 
+                                    {filteredCandidateIds ? (
+                                        <span className="text-purple-600 font-medium">
+                                            {` フィルタ中: ${filteredCount}名 / ${totalCandidates}名`}
+                                        </span>
+                                    ) : (
+                                        ` 総候補者数: ${totalCandidates}名`
+                                    )}
+                                </p>
                             </div>
                         </div>
 
                         <div className="flex gap-4 overflow-x-auto pb-4">
-                            {selectedPosition.phases.map((phase) => (
-                                <div 
-                                    key={phase.id} 
-                                    className={`min-w-80 bg-gray-50 rounded-lg p-4 transition-all ${
-                                        selectedCandidate ? 'border-2 border-dashed border-blue-300' : ''
-                                    }`}
-                                    onDragOver={(e) => {
-                                        e.preventDefault();
-                                        e.dataTransfer.dropEffect = 'move';
-                                    }}
-                                    onDragEnter={(e) => e.preventDefault()}
-                                    onDrop={(e) => {
-                                        e.preventDefault();
-                                        const data = JSON.parse(e.dataTransfer.getData('text/plain'));
-                                        if (data.candidateId && data.fromPhaseId !== phase.id) {
-                                            moveCandidate(data.candidateId, data.fromPhaseId, phase.id);
-                                            setSelectedCandidate(null);
-                                        }
-                                    }}
-                                >
-                                    <div className="flex items-center justify-between mb-4">
-                                        <div className="flex items-center space-x-2">
-                                            <div className={`w-4 h-4 rounded-full ${phase.color}`}></div>
-                                            <h2 className="font-semibold text-gray-800">{phase.name}</h2>
-                                        </div>
-                                        <span className="text-sm text-gray-500">{phase.candidates.length}</span>
-                                    </div>
+                            {selectedPosition.phases.map((phase) => {
+                                const visibleCandidates = filteredCandidateIds 
+                                    ? phase.candidates.filter(c => filteredCandidateIds.includes(c.id))
+                                    : phase.candidates;
 
-                                    <div className="space-y-2 mb-4 max-h-96 overflow-y-auto">
-                                        {phase.candidates.map((candidate) => (
-                                            <CandidateCard
-                                                key={candidate.id}
-                                                candidate={candidate}
-                                                phaseId={phase.id}
-                                                selectedCandidate={selectedCandidate}
-                                                onCandidateClick={handleCandidateClick}
-                                                onOpenDetail={openCandidateDetail}
-                                                onUpdateCandidate={updateCandidate}
-                                                onMoveCandidate={moveCandidate}
-                                                onDeleteCandidate={deleteCandidate}
-                                                phases={selectedPosition.phases}
-                                                isHighlighted={highlightedCandidateId === candidate.id}
-                                                candidateRef={(el) => candidateRefs.current[candidate.id] = el}
-                                            />
-                                        ))}
-                                        {phase.candidates.length === 0 && (
-                                            <div className="flex items-center justify-center h-20 text-gray-400 text-sm">
-                                                まだ候補者がいません
+                                return (
+                                    <div 
+                                        key={phase.id} 
+                                        className={`min-w-80 bg-gray-50 rounded-lg p-4 transition-all ${
+                                            selectedCandidate ? 'border-2 border-dashed border-blue-300' : ''
+                                        }`}
+                                        onDragOver={(e) => {
+                                            e.preventDefault();
+                                            e.dataTransfer.dropEffect = 'move';
+                                        }}
+                                        onDragEnter={(e) => e.preventDefault()}
+                                        onDrop={(e) => {
+                                            e.preventDefault();
+                                            const data = JSON.parse(e.dataTransfer.getData('text/plain'));
+                                            if (data.candidateId && data.fromPhaseId !== phase.id) {
+                                                moveCandidate(data.candidateId, data.fromPhaseId, phase.id);
+                                                setSelectedCandidate(null);
+                                            }
+                                        }}
+                                    >
+                                        <div className="flex items-center justify-between mb-4">
+                                            <div className="flex items-center space-x-2">
+                                                <div className={`w-4 h-4 rounded-full ${phase.color}`}></div>
+                                                <h2 className="font-semibold text-gray-800">{phase.name}</h2>
                                             </div>
-                                        )}
-                                    </div>
-
-                                    <div className="flex items-center space-x-2 text-gray-500">
-                                        <Plus />
-                                        <input
-                                            type="text"
-                                            placeholder="候補者を追加"
-                                            value={newTaskInputs[phase.id] || ''}
-                                            onChange={(e) => setNewTaskInputs(prev => ({ ...prev, [phase.id]: e.target.value }))}
-                                            onKeyPress={(e) => {
-                                                if (e.key === 'Enter') {
-                                                    addCandidate(phase.id, newTaskInputs[phase.id]);
-                                                    setNewTaskInputs(prev => ({ ...prev, [phase.id]: '' }));
+                                            <span className="text-sm text-gray-500">
+                                                {filteredCandidateIds && visibleCandidates.length !== phase.candidates.length
+                                                    ? `${visibleCandidates.length} / ${phase.candidates.length}`
+                                                    : phase.candidates.length
                                                 }
-                                            }}
-                                            className="flex-1 bg-transparent border-none outline-none placeholder-gray-400 text-sm"
-                                        />
+                                            </span>
+                                        </div>
+
+                                        <div className="space-y-2 mb-4 max-h-96 overflow-y-auto">
+                                            {visibleCandidates.map((candidate) => (
+                                                <CandidateCard
+                                                    key={candidate.id}
+                                                    candidate={candidate}
+                                                    phaseId={phase.id}
+                                                    selectedCandidate={selectedCandidate}
+                                                    onCandidateClick={handleCandidateClick}
+                                                    onOpenDetail={openCandidateDetail}
+                                                    onUpdateCandidate={updateCandidate}
+                                                    onMoveCandidate={moveCandidate}
+                                                    onDeleteCandidate={deleteCandidate}
+                                                    phases={selectedPosition.phases}
+                                                    isHighlighted={highlightedCandidateId === candidate.id}
+                                                    candidateRef={(el) => candidateRefs.current[candidate.id] = el}
+                                                />
+                                            ))}
+                                            {visibleCandidates.length === 0 && (
+                                                <div className="flex items-center justify-center h-20 text-gray-400 text-sm">
+                                                    {filteredCandidateIds && phase.candidates.length > 0
+                                                        ? 'フィルタ条件に該当する候補者がいません'
+                                                        : 'まだ候補者がいません'
+                                                    }
+                                                </div>
+                                            )}
+                                        </div>
+
+                                        <div className="flex items-center space-x-2 text-gray-500">
+                                            <Plus />
+                                            <input
+                                                type="text"
+                                                placeholder="候補者を追加"
+                                                value={newTaskInputs[phase.id] || ''}
+                                                onChange={(e) => setNewTaskInputs(prev => ({ ...prev, [phase.id]: e.target.value }))}
+                                                onKeyPress={(e) => {
+                                                    if (e.key === 'Enter') {
+                                                        addCandidate(phase.id, newTaskInputs[phase.id]);
+                                                        setNewTaskInputs(prev => ({ ...prev, [phase.id]: '' }));
+                                                    }
+                                                }}
+                                                className="flex-1 bg-transparent border-none outline-none placeholder-gray-400 text-sm"
+                                            />
+                                        </div>
                                     </div>
-                                </div>
-                            ))}
+                                );
+                            })}
                         </div>
 
                         <PhaseManagementModal
@@ -2367,6 +2436,7 @@
                             currentPositionId={selectedPosition.id}
                             onClose={() => setShowFilterModal(false)}
                             onNavigateToCandidate={handleNavigateToCandidate}
+                            onApplyFilter={handleApplyFilter}
                         />
                     </div>
                 );
